# plutus-specification-language

./: .gitignore  Actor-Model-Cardano.md  PSL.hs  PSL.idr  Prettyprint.hs  README.md  TransactionFamily.md  cabal.project.local  dusd.hs  flake.nix  hie.yaml  limitations.md  psl.cabal  psl.nix  spec.hs  treasury.hs  v1.hs  vault.hs
PSL/: Eval.hs  Prettyprint.hs
PSL/Eval/: Backend.hs  Interval.hs  Mermaid.hs  TH.hs  Tx.hs
UPLC/: Backend.hs
examples/: PCounter.idr  PPayToPKH.idr  PSL.idr  TicTacToe.hs  chess.md  psl-examples.ipkg  simple.md
families/: Diagram.lhs  Diagram.md  Families.hs  Family.hs  FamilyValues.hs  HKD.lhs  HKD.md  Ledger.hs  NFT.md  SP.hs  TransactionFamily.md  Typed.md  Values.md  families.cabal
families/Families/: Diagram.hs
families/Families/Diagram/: TH.hs
families/Family/: Diagram.hs  Values.hs
families/Family/Diagram/: TH.hs
img/: ProofArchitecture.dot
new/: README.md
old/: flake.nix  psl.ipkg
old/examples/: simple.md
old/img/: ProofArchitecture.dot
transaction-family-specification/: CHANGELOG.md  Family.hs  NFT.md  README.md  TransactionFamily.lhs  Values.lhs  Values.md  cabal.project  transaction-family-specification.cabal
transaction-family-specification/Family/: Diagram.hs  Ledger.hs  Values.hs
transaction-family-specification/Family/Diagram/: TH.hs
transaction-family-specification/doc/: Diagram.md  HKD.md  Legend.hs  NFT.lhs  NFT.md  Typed.lhs  Typed.md  Values.md
transaction-family-specification/scaffold/: Diagrams.hs  Spec.hs  cabal.project  specification.cabal
