cabal-version:      3.0
name:               psl
version:            0.1.0
extra-source-files: README.md

library
  default-language: GHC2021
  default-extensions:
    NoMonomorphismRestriction
    NoStarIsType
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    NoFlexibleInstances
    FunctionalDependencies
    GADTs
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    LiberalTypeSynonyms
    MonadComprehensions
    MultiWayIf
    NegativeLiterals
    NondecreasingIndentation
    NumDecimals
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    TypeFamilies
    TypeFamilyDependencies
    UnicodeSyntax
    UnliftedFFITypes
    UnliftedNewtypes
    ViewPatterns
    OverloadedRecordDot

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-all-missed-specializations
    -Wno-unticked-promoted-constructors
    -fno-show-valid-hole-fits

  exposed-modules:
    PSL
    PSL.Eval
    PSL.Eval.TH
    PSL.Eval.Interval
    PSL.Eval.Mermaid
    PSL.Eval.Backend
    MonoidDo

  build-depends:
    , base
    , bytestring
    , containers
    , generics-sop
    , plutarch-core
    , prettyprinter
    , template-haskell
    , text
    , time
    , transformers
