cabal-version:      2.4
name:               families
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mario Blažević
maintainer:         mario@mlabs.city

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable diagram
  main-is:            Diagram.lhs
  other-modules:      Family, Family.Diagram, Family.Diagram.TH, Typed, HKD, NFT
  ghc-options:        -pgmL markdown-unlit -main-is Diagram
  build-depends:      base, bytestring, containers, text, template-haskell >= 2.18, fgl, graphviz >= 2999.10
  build-tool-depends: markdown-unlit:markdown-unlit
  default-language:   Haskell2010

test-suite doc
  type:               exitcode-stdio-1.0
  main-is:            TransactionFamily.lhs
  other-modules:      Family, Family.Values, Family.Diagram, Family.Diagram.TH, Family.Ledger, Typed, HKD, NFT, Diagram, Values
  ghc-options:        -pgmL markdown-unlit
  build-depends:      base, bytestring, containers, text, template-haskell >= 2.18, fgl, graphviz >= 2999.10
  build-tool-depends: markdown-unlit:markdown-unlit
  default-language:   Haskell2010
